--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ a{
 \* ================================== */
 
 .header{
-position: fixed;
+position: flex;
 width: 100%;
 background-color: #84596b;
 z-index: 10;
@@ -75,4 +75,101 @@ padding-right: 15px;
     align-items: center;
     text-align: center;
     transition: color 350ms;
+}
+
+    .menu__link:hover{
+        color: #E5F4E3;
+        font-weight: 700;
+    }
+
+@media screen and (max-width: 1024px) {
+
+menu{
+    overflow: hidden;
+    transform: scaleX(0);
+    transform-origin: top left;
+    transition: transform 300ms, opacity 300ms;
+    position: absolute;
+    right: 0;
+    width: 100%;
+    top: 100%;
+    opacity: 0;
+}
+
+.menu__link{
+    font-size: 13px;
+    
+}
+
+.menu--visible{
+    opacity: 1;
+    transform: scale(1); 
+    gap: 30px;
+    padding-left: 15px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    top: 100%;
+    display: flex;
+    flex-direction: column;
+    background-color: #010326;
+    box-shadow: 0px 0px 9px 3px rgba(1, 3, 38, 0.15);
+
+}
+
+.header__content{
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.header__logo{
+    box-sizing: content-box;
+    color: #DDBDD5;
+    cursor: pointer;
+     font-family: 'Arvo';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 15px;
+    line-height: 21px;
+    transition: color 350ms;
+}
+
+.header__navigation{
+    order: 1;
+}
+}
+
+
+/* ================================== *\
+       
+  S E C T I O N   G E N E R A L
+
+\* ================================== */
+
+.section{
+padding: 70px 0px;
+}
+
+.section__background--color01{
+background-color: #1C1C1C;
+}
+
+/* ================================== *\
+       
+  S E C T I O N   S O B R E   M Í 
+
+\* ================================== */
+
+.section__construye{
+    padding-top: 50%;
+}
+
+.saludo__tittle{
+    padding-top: 5%;
+    font-family: 'Arvo';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 50px;
+    line-height: 120%;
+    margin: 16px;
+    color: #1C1C1C;
 }
