--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,6 @@ a{
 position: flex;
 width: 100%;
 background-color: #84596b;
-z-index: 10;
 }
 
 .header__content{
@@ -71,6 +70,7 @@ padding-right: 15px;
     cursor: pointer;
     font-family: 'Fustat';
     font-style: normal;
+    font-size: 18px;
     display: flex;
     align-items: center;
     text-align: center;
@@ -80,7 +80,9 @@ padding-right: 15px;
     .menu__link:hover{
         color: #E5F4E3;
         font-weight: 700;
+        font-size: 19px;
     }
+    
 
 @media screen and (max-width: 1024px) {
 
@@ -97,23 +99,7 @@ menu{
 }
 
 .menu__link{
-    font-size: 13px;
-    
-}
-
-.menu--visible{
-    opacity: 1;
-    transform: scale(1); 
-    gap: 30px;
-    padding-left: 15px;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    top: 100%;
-    display: flex;
-    flex-direction: column;
-    background-color: #010326;
-    box-shadow: 0px 0px 9px 3px rgba(1, 3, 38, 0.15);
-
+    font-size: 16px;
 }
 
 .header__content{
@@ -135,6 +121,7 @@ menu{
 
 .header__navigation{
     order: 1;
+    padding-right: 16px;
 }
 }
 
@@ -153,23 +140,90 @@ padding: 70px 0px;
 background-color: #1C1C1C;
 }
 
+.section__content {
+    max-width: 1170px;
+    margin-left: auto;
+    margin-right: auto;
+    
+}
+
+
+
 /* ================================== *\
        
   S E C T I O N   S O B R E   M Í 
 
 \* ================================== */
 
-.section__construye{
-    padding-top: 50%;
+.section__sobre-mi{
+    padding-top: 10%;
 }
 
-.saludo__tittle{
-    padding-top: 5%;
+.sobre-mi__box{
+    display: flex;s
+}
+
+.sobre-mi__text{
+    padding-right: 60px;
+}
+
+
+
+.sobre-mi__tittle{
     font-family: 'Arvo';
     font-style: normal;
     font-weight: 600;
-    font-size: 50px;
-    line-height: 120%;
+    font-size: 70px;
+    line-height: normal;
+    margin-right: 0px;
     margin: 16px;
     color: #1C1C1C;
 }
+
+.sobre-mi__text, .sobre-mi__img{
+    width: 100%;
+    
+}
+
+.sobre-mi__img{
+   width: 600px;
+   margin-right: 16px;
+}
+
+.sobre-mi__pg{
+    font-family: 'Fustat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+    margin-bottom: 30px;
+    margin-left: 16px;
+    margin-right: 0px;
+    color: #1c1c1c;
+}
+
+.sobre-mi__button--01{
+    display: flex;
+    justify-content: left;
+}
+
+.sobre-mi__button--01_color--01{
+    border: #84596B 2px solid;
+    padding: 10px 75px;
+    font-family: 'Arvo';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    color: #84596B;
+    background-color: transparent;
+    border-radius: 25px;
+    cursor: pointer;
+    margin: 16px;
+}
+
+    .sobre-mi__button--01_color--01:hover{
+        border: #DDBDD5;
+        background-color: #FF2E00;
+        color: #E5F4E3;
+        font-weight: 600;
+    }
